--- a/coalmine.yaml
+++ b/coalmine.yaml
@@ -56,8 +56,6 @@ metadata:
   name: coalmine-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/server-snippet: |
-      more_set_input_headers "X-Canary: $remote_user";
 spec:
   rules:
     - host: coalmine.local
@@ -78,11 +76,9 @@ metadata:
   name: canary-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/server-snippet: |
-      more_set_input_headers "X-Canary: $remote_user";
     nginx.ingress.kubernetes.io/canary: "true"
-    nginx.ingress.kubernetes.io/canary-by-header: "Authorization"
-    nginx.ingress.kubernetes.io/canary-by-header-pattern: "^Basic Y2FuYXJ5"
+    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary"
+    nginx.ingress.kubernetes.io/canary-weight: "50"
 spec:
   rules:
     - host: coalmine.local
